Crash in [@ mozilla::gfx::AutoSerializeWithMoz2D::AutoSerializeWithMoz2D]
Categories
(Core :: Graphics, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox87 | --- | unaffected |
firefox88 | + | verified |
firefox89 | + | verified |
People
(Reporter: bobowen, Assigned: bobowen)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
[Tracking Requested - why for this release]:
Crash when user has disabled remote canvas.
Crash report: https://crash-stats.mozilla.org/report/index/c188b534-2c43-4ea8-860a-76fd80210331
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::gfx::AutoSerializeWithMoz2D::AutoSerializeWithMoz2D gfx/2d/Factory.cpp:795
1 xul.dll static mozilla::layers::D3D11TextureData::Create gfx/layers/d3d11/TextureD3D11.cpp:506
2 xul.dll static mozilla::layers::D3D11TextureData::Create gfx/layers/d3d11/TextureD3D11.cpp:416
3 xul.dll mozilla::layers::D3D11TextureClientAllocationHelper::Allocate gfx/layers/D3D11ShareHandleImage.cpp:116
4 xul.dll mozilla::layers::TextureClientRecycleAllocator::CreateOrRecycle gfx/layers/client/TextureClientRecycleAllocator.cpp:171
5 xul.dll mozilla::layers::D3D11RecycleAllocator::CreateOrRecycleClient gfx/layers/D3D11ShareHandleImage.cpp:183
6 xul.dll mozilla::layers::D3D11ShareHandleImage::AllocateTexture gfx/layers/D3D11ShareHandleImage.cpp:39
7 xul.dll mozilla::D3D11DXVA2Manager::CopyToImage dom/media/platforms/wmf/DXVA2Manager.cpp:875
8 xul.dll mozilla::WMFVideoMFTManager::CreateD3DVideoFrame dom/media/platforms/wmf/WMFVideoMFTManager.cpp:662
9 xul.dll mozilla::WMFVideoMFTManager::Output dom/media/platforms/wmf/WMFVideoMFTManager.cpp:794
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
Assignee | ||
Comment 3•4 years ago
|
||
Comment on attachment 9212735 [details]
Bug 1702133: Add null checks to AutoSerializeWithMoz2D. r=jnicol!
Beta/Release Uplift Approval Request
- User impact if declined: Video will crash when remote canvas is disabled by user.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: On Windows with hardware acceleration:
- disable remote canvas (gfx.canvas.remote=false) and restart
- try to play a video on youtube
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple null checks
- String changes made/needed: None
Assignee | ||
Updated•4 years ago
|
Comment 4•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Comment 5•4 years ago
|
||
Comment on attachment 9212735 [details]
Bug 1702133: Add null checks to AutoSerializeWithMoz2D. r=jnicol!
Approved for 88.0b6.
Comment 6•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Comment 7•4 years ago
|
||
Unfortunately we were unable to reproduce the issue. Tried on two different systems, one with Nvidia GTX1080 (Windows 10) and a laptop with Intel HD 4000 (Win 7 and 10) with Firefox 89.0a1 (2021-03-29/31) and with Firefox 88.0b5 with gfx.canvas.remote=false. Youtube videos seem to work normally, without any crashes.
Bob, is this issue intermittent? any idea what we could try in order to reproduce it ?
Assignee | ||
Comment 8•4 years ago
|
||
(In reply to Catalin Sasca, QA [:csasca] from comment #7)
Unfortunately we were unable to reproduce the issue. Tried on two different systems, one with Nvidia GTX1080 (Windows 10) and a laptop with Intel HD 4000 (Win 7 and 10) with Firefox 89.0a1 (2021-03-29/31) and with Firefox 88.0b5 with gfx.canvas.remote=false. Youtube videos seem to work normally, without any crashes.
Bob, is this issue intermittent? any idea what we could try in order to reproduce it ?
It might depend on the video, this one crashes it for me: https://www.youtube.com/watch?v=g9kiuQ1pql8
Comment 9•4 years ago
|
||
We tried again with the video you provided on the same systems, and it is still working as expected.
Can you verify it please and see if it the fix is working correctly? Thank you!
Assignee | ||
Comment 10•4 years ago
|
||
(In reply to Catalin Sasca, QA [:csasca] from comment #9)
We tried again with the video you provided on the same systems, and it is still working as expected.
Can you verify it please and see if it the fix is working correctly? Thank you!
Strange, there must be other things required to trigger.
Anyway, confirmed crash on Fx 88.0b5: https://crash-stats.mozilla.org/report/index/33318a9a-f1cb-45f8-ba3b-3196a0210406
Updated to Fx 88.0b7 and cannot reproduce.
I'd already tested on Nightly, although I didn't upload the crash.
Updated•4 years ago
|
Description
•