Bug 1702133: Add null checks to AutoSerializeWithMoz2D. r=jnicol, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D110373